v5.0.0/_sources/generated/pcdsdevices.sim.SynMotor.rst.txt
pcdsdevices.sim.SynMotor
========================

.. currentmodule:: pcdsdevices.sim

.. autoclass:: SynMotor

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - readback
          - :class:`~ophyd.sim._ReadbackSignal`
          - 
          - 
          - hinted
          - Inherited from :class:`~ophyd.sim.SynAxis`
    
        * - setpoint
          - :class:`~ophyd.sim._SetpointSignal`
          - 
          - 
          - normal
          - Inherited from :class:`~ophyd.sim.SynAxis`
    
        * - velocity
          - :class:`~ophyd.signal.Signal`
          - 
          - 
          - config
          - Inherited from :class:`~ophyd.sim.SynAxis`
    
        * - acceleration
          - :class:`~ophyd.signal.Signal`
          - 
          - 
          - config
          - Inherited from :class:`~ophyd.sim.SynAxis`
    
        * - unused
          - :class:`~ophyd.signal.Signal`
          - 
          - 
          - omitted
          - Inherited from :class:`~ophyd.sim.SynAxis`
    

    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: camonitor
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: end_monitor_thread
    .. automethod:: get
    .. automethod:: move
    .. automethod:: mv
    .. automethod:: mv_ginput
    .. automethod:: mvr
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: set
    .. automethod:: set_position
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    .. automethod:: tweak
    .. automethod:: umv
    .. automethod:: umvr
    .. automethod:: wait
    .. automethod:: wm
    .. automethod:: wm_update
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: position
    
    